updated to implement sending a prompt to chatgpt.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="popup.css">
-    <title>Chrome Addon v3: popup</title>
-</head>
-<body>
-    This is the <span class="special-text">HTML</span> body of the addon.
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>OpenAI Chat Extension</title>
+    <script src="popup.js"></script>
+  </head>
+  <body>
+    <label for="prompt">Enter your prompt:</label>
+    <input type="text" id="prompt">
+    <button id="submit">Submit</button>
+  </body>
 </html>
